canadensis_dsdl_frontend/tests/compile_fail/byte_not_allowed/canadensis/ContainsByte.1.0.dsdl
byte[<=16] something

@sealed
